fix: Initialize whitespace for responsive styles

--- a/src/styles/netcommunity/part-overrides/_default.overrides.scss
+++ b/src/styles/netcommunity/part-overrides/_default.overrides.scss
@@ -2,6 +2,7 @@ $input-max-width: 350px;
 
 td.wsNowrap {
   padding: 0 !important;
+  white-space: initial;
 }
 
 /********   Default Styles ********/
